--- a/angular.json
+++ b/angular.json
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "stripejs-payment"
+  "defaultProject": "stripejs-payment",
+  "cli": {
+    "analytics": false
+  }
 }
