--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@angular/compiler-cli": "~11.0.9",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/stripe-checkout": "^1.0.4",
+    "@types/stripe-v3": "^3.1.26",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
